tests/purs/failing/2197-shouldFail2.purs
-- @shouldFailWith UnknownName
module Main where

import Prim (Boolean)

z :: Number
z = 0.0
