tests/purs/failing/2197-shouldFail2.out
Error found:
in module [33mMain[0m
at tests/purs/failing/2197-shouldFail2.purs:6:6 - 6:12 (line 6, column 6 - line 6, column 12)

  Unknown type [33mNumber[0m


See https://github.com/purescript/documentation/blob/master/errors/UnknownName.md for more information,
or to contribute content related to this error.

